Export compressed results on demand
