# web/openapi.json
@@ -890,6 +890,27 @@
         "title": "ResultEngineSummary",
         "type": "object"
       },
+      "ResultImportResponse": {
+        "additionalProperties": false,
+        "properties": {
+          "run_id": {
+            "format": "uuid",
+            "title": "Run Id",
+            "type": "string"
+          },
+          "status": {
+            "const": "COMPLETE",
+            "default": "COMPLETE",
+            "title": "Status",
+            "type": "string"
+          }
+        },
+        "required": [
+          "run_id"
+        ],
+        "title": "ResultImportResponse",
+        "type": "object"
+      },
       "ResultMetadataResponse": {
         "additionalProperties": false,
         "properties": {
@@ -1566,6 +1587,27 @@
         ]
       }
     },
+    "/api/v1/results/import": {
+      "post": {
+        "operationId": "import_result_api_v1_results_import_post",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResultImportResponse"
+                }
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "summary": "Import Result",
+        "tags": [
+          "results"
+        ]
+      }
+    },
     "/api/v1/runs": {
       "post": {
         "operationId": "create_run_api_v1_runs_post",
@@ -1741,6 +1783,47 @@
         "summary": "Run Events",
         "tags": [
           "runs"
+        ]
+      }
+    },
+    "/api/v1/runs/{run_id}/export": {
+      "get": {
+        "operationId": "export_result_api_v1_runs__run_id__export_get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "run_id",
+            "required": true,
+            "schema": {
+              "format": "uuid",
+              "title": "Run Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Export Result",
+        "tags": [
+          "results"
         ]
       }
     },
